--- a/verilog-sv/v-behav.qmd
+++ b/verilog-sv/v-behav.qmd
@@ -22,3 +22,16 @@ Intra-assignment Delays:
 // Delay is specified on the right side
 <LHS> = #<delay> <RHS>
 ```
+
+```verilog
+    // Inter-assignment delay: Wait for #5 time units
+    // and then assign a and c to 1. Note that 'a' and 'c'
+    // gets updated at the end of current timestep
+    #5  a <= 1;
+    	c <= 1;
+
+    // Intra-assignment delay: First execute the statement
+    // then wait for 5 time units and then assign the evaluated
+    // value to q
+    q <= #5 a & b | c;
+```
